--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,52 @@
-name: Publish Python Package to PyPI
+name: Publish to PyPI
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - "v*.*.*"
 
 jobs:
-  build-and-publish:
-    name: Build and Publish
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.12"
 
-      - name: Install build and upload tools
-        run: |
-          python -m pip install --upgrade pip setuptools wheel twine
+      - name: Install build tool
+        run: python -m pip install --upgrade build
 
-      - name: Build distribution
-        run: |
-          python setup.py sdist bdist_wheel
+      - name: Build sdist and wheel
+        run: python -m build --sdist --wheel --outdir dist
 
-      - name: Publish to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          python -m twine upload --skip-existing dist/*
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/*
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/project/konijima-gpt-cli
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist/
+          # repository-url: https://test.pypi.org/legacy/   # uncomment for TestPyPI
