Add Ruff linting and refactor project structure
- Introduced a GitHub Actions workflow for linting using Ruff.
- Added linting job to the publish workflow to ensure code quality before building.
- Updated .gitignore to exclude Ruff and pytest caches.
- Updated pre-commit configuration to use the latest version of Ruff.
- Added VSCode settings and extensions for Ruff integration.
- Created a Makefile for common tasks including formatting and linting.
- Removed VERSION file and integrated versioning into pyproject.toml.
- Created core functionality for the CLI in commands.py and config.py.
- Implemented memory management in memory.py.
- Refactored gpt.py to serve as the main entry point for the CLI.
- Removed old requirements and setup files, transitioning to pyproject.toml for dependency management.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.ruff_cache
+.pytest_cache
 
 # C extensions
 *.so
@@ -64,7 +66,6 @@ venv.bak/
 
 # IDE and editor folders
 .idea/
-.vscode/
 *.code-workspace
 *.sublime-project
 *.sublime-workspace
