--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.0
+    rev: v0.3.4  # Use the latest tag from https://github.com/astral-sh/ruff-pre-commit/tags
     hooks:
       - id: ruff
         args: ["--fix"]
+      - id: ruff-format
