--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,5 @@
 {
     "recommendations": [
-        "charliermarsh.ruff",
-        "ms-vscode.makefile-tools"
+        "charliermarsh.ruff"
     ]
 }
