--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dev = [
   "build >=1.0.3,<2.0.0",
   "twine >=4.0.2,<5.0.0",
   "ruff >=0.3.0,<1.0.0",
-  "pre-commit >=3.6.0,<4.0.0"
+  "pre-commit >=3.6.0,<4.0.0",
+  "pytest-testdox >=3.0.0,<4.0.0"
 ]
 
 # CLI entry point
