--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,26 +7,15 @@ on:
 
 jobs:
   lint:
-    name: Ruff Lint Check
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/_lint.yml
 
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-
-      - name: Install Ruff
-        run: pip install ruff
-
-      - name: Run Ruff check (fail on lint)
-        run: ruff check .
+  test:
+    uses: ./.github/workflows/_test.yml
+    needs: lint
 
   build:
-    name: Build Package
-    needs: lint # ⬅️ Ensure lint passes before building
+    name: Build
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,11 +27,13 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install build tool
-        run: python -m pip install --upgrade build
+      - name: Install Make + build deps
+        run: sudo apt-get update && sudo apt-get install -y make
 
-      - name: Build sdist and wheel
-        run: python -m build --sdist --wheel --outdir dist
+      - name: Build package
+        run: |
+          make install
+          make build
 
       - uses: actions/upload-artifact@v4
         with:
