Update pre-commit configuration and improve test code structure
- Upgrade ruff-pre-commit to version 0.11.6
- Adjust VSCode settings for linting and formatting
- Refactor test code to use context managers for patching
- Enhance pyproject.toml with ruff configuration options

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,5 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.4  # Use the latest tag from https://github.com/astral-sh/ruff-pre-commit/tags
+    rev: v0.11.6
     hooks:
-      - id: ruff
-        args: ["--fix"]
       - id: ruff-format
