--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,16 +2,25 @@ name: Check (Lint + Test)
 
 on:
   push:
-    branches: ["main", "dev", "feature/**"]
+    branches: ["main", "dev"]
   pull_request:
+    branches: ["main", "dev"]
 
 jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v4
         with:
           python-version: "3.12"
-      - run: sudo apt-get update && sudo apt-get install -y make
-      - run: make ci
+
+      - name: Install Make + Python build tools
+        run: sudo apt-get update && sudo apt-get install -y make
+
+      - name: Install dev dependencies
+        run: pip install -e ".[dev]"
+
+      - name: Run lint, test, build, validate
+        run: make ci-release
