--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,8 +22,11 @@ jobs:
       - name: Install Make + build deps
         run: sudo apt-get update && sudo apt-get install -y make
 
-      - name: Run release checks (lint, test, build)
-        run: make release
+      - name: Install dev dependencies
+        run: pip install -e ".[dev]"
+
+      - name: Run release checks
+        run: make ci-release
 
       - uses: actions/upload-artifact@v4
         with:
