--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -16,11 +17,13 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install Make + Python build tools
+      - name: Install Make and Python build tools
         run: sudo apt-get update && sudo apt-get install -y make
 
-      - name: Install dev dependencies
-        run: pip install -e ".[dev]"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
 
-      - name: Run lint, test, build, validate
+      - name: Run checks
         run: make ci-release
