--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,16 +19,19 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install Make + build deps
+      - name: Install Make and build tools
         run: sudo apt-get update && sudo apt-get install -y make
 
-      - name: Install dev dependencies
-        run: pip install -e ".[dev]"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
 
       - name: Run release checks
         run: make ci-release
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload distribution artifacts
+        uses: actions/upload-artifact@v4
         with:
           name: dist
           path: dist/*
@@ -45,12 +48,13 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download distribution artifacts
+        uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist
 
-      - name: Publish package to PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
