--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,24 +19,24 @@ classifiers = [
 
 # Core dependencies
 dependencies = [
-  "openai >=1.75.0,<2.0.0",
-  "rich >=13.9.4,<14.0.0",
-  "prompt_toolkit >=3.0.51,<4.0.0",
-  "python-dotenv >=1.1.0,<2.0.0"
+  "openai",
+  "rich",
+  "prompt_toolkit",
+  "python-dotenv"
 ]
 
 # Development-only dependencies
 [project.optional-dependencies]
 dev = [
-  "build >=1.0.3,<2.0.0",
-  "pre-commit >=4.2.0,<5.0.0",
-  "pylint >=3.3.6,<4.0.0",
-  "pytest >=8.3.5,<9.0.0",
-  "pytest-testdox >=3.1.0,<4.0.0",
-  "ruff >=0.11.6,<1.0.0",
-  "setuptools >=78.1.0",
-  "twine >=6.1.0,<7.0.0",
-  "wheel >=0.46.1"
+  "build",
+  "pre-commit",
+  "pylint",
+  "pytest",
+  "pytest-testdox",
+  "ruff",
+  "setuptools",
+  "twine",
+  "wheel"
 ]
 
 # CLI entry point
