Refactor branch specifications in GitHub Actions workflow for clarity and correctness
Refactors branch specifications in workflow

Clarifies and corrects branch configurations for GitHub Actions.

Restricts push and pull request triggers to relevant branches.

Improves workflow accuracy and maintainability.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,9 +2,9 @@ name: Check (Lint + Test)
 
 on:
   push:
-    branches: ["main", "dev"]
+    branches: ["dev"]
   pull_request:
-    branches: ["main", "dev"]
+    branches: ["main"]
 
 jobs:
   ci:
