Refactors GPT CLI architecture for better modularity and clarity
- Splits monolithic entry-point script into dedicated modules:
  - `main.py`: argument parsing, REPL loop, command routing
  - `chat.py`: OpenAI communication, memory handling, prompt assembly
  - `logging.py`: prompt/response log file management

- Improves separation of concerns, making the codebase easier to navigate and maintain.

- Adds descriptive docstrings to all functions for clarity and documentation purposes.

- Preserves existing features such as streaming, memory summarization, and REPL support, while enabling future extensibility.

- No changes to CLI behavior or arguments — fully backward-compatible.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "blackcortex-gpt-cli"
-version = "1.2.1"
+version = "1.2.2"
 description = "Terminal-based GPT CLI with memory, markdown, and stream support"
 keywords = ["gpt", "cli", "terminal", "openai"]
 readme = "README.md"
@@ -41,7 +41,7 @@ dev = [
 
 # CLI entry point
 [project.scripts]
-gpt = "blackcortex_cli.gpt:main"
+gpt = "blackcortex_cli.main:main"
 
 # Build system configuration
 [build-system]
