--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,18 @@
     "editor.defaultFormatter": "charliermarsh.ruff"
   },
   "files.exclude": {
-    "**/__pycache__/": true
-  }
+    "**/__pycache__/": true,
+    ".venv/": true
+  },
+  "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.terminal.activateEnvironment": true,
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": false,
+  "python.linting.pycodestyleEnabled": false,
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "python.testing.nosetestsEnabled": false,
+  "python.testing.pytestArgs": ["tests"],
+  "python.analysis.extraPaths": ["blackcortex_cli"]
 }
