--- a/.coveragerc
+++ b/.coveragerc
@@ -7,7 +7,7 @@ omit =
 
 [report]
 show_missing = True
-skip_covered = True
+skip_covered = False
 fail_under = 90
 exclude_lines =
     pragma: no cover
