--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "blackcortex-gpt-cli"
-version = "1.2.2"
+version = "1.3.0"
 description = "Terminal-based GPT CLI with memory, markdown, and stream support"
 keywords = ["gpt", "cli", "terminal", "openai"]
 readme = "README.md"
@@ -21,6 +21,7 @@ classifiers = [
 dependencies = [
   "openai",
   "rich",
+  "tiktoken",
   "prompt_toolkit",
   "python-dotenv"
 ]
